--- a/Análise no R/Análise_Dados.Rmd
+++ b/Análise no R/Análise_Dados.Rmd
@@ -36,8 +36,6 @@ Os comandos abaixo fará a leitura dos seguintes dados:
 library(readxl)
 # DICIONAÁRIO DE DADOS
 disc_dados <- read_excel("/users/waldex/Documents/Github/Projeto_Ferramentas_Computacionais/microdados_censo_da_educacao_superior_2024/dicionário_dados_educação_superior.xlsx")
-#caminho_correto <- file.choose()
-#print(caminho_correto)
 ```
 
 ```{r}
@@ -237,7 +235,7 @@ dados_cursos <- cadastro_cursos %>%
 head(dados_cursos)
 ```
 
-# 3. Analisando o panoram Geral das Instituições de ensino Supeior
+# 3. Analisando o panorama Geral das Instituições de ensino Supeior
 ```{r}
 tabela_frequencia <- dados_ies %>%
   # 1. Agrupando os dados pela coluna 'REGIAO'
@@ -255,6 +253,7 @@ tabela_frequencia <- dados_ies %>%
   ) %>%
   # 5. Removendo a coluna auxiliar 'Total_Geral'
   select(-Total_Geral)
+arrange(desc(`Percentual (%)`))   # <<< ordenação por maior percentual
 ```
 
 
@@ -300,39 +299,29 @@ Utilizamos a projeção do senso feita em 2022 para o ano de 2023 para alinhar c
 
 ## 3.1.  Quantidade de instituições x populacão
 ```{r}
-#Realizar a junção (merge) e manipulação
-library(dplyr) 
+library(dplyr)
+
+# Cálculo e ordenação por população
 pop_ies <- tabela_frequencia %>%
   left_join(POP_UF, by = "REGIAO") %>%
   select(-CO_REGIAO_IES) %>%
   rename(
-    `Val._abs._IES` = Valores_absolutos, 
-    `Percentual_ies (%)` = `Percentual (%)`
-  )
-```
-```{r}
-#Cálculo de densidade por região
-pop_ies <- tabela_frequencia %>%
-  left_join(POP_UF, by = "REGIAO") %>%
-  select(-CO_REGIAO_IES) %>%
-  rename(
-    `Val._abs._IES` = Valores_absolutos, 
+    `Val._abs._IES` = Valores_absolutos,
     `Percentual_ies (%)` = `Percentual (%)`
   ) %>%
   mutate(
-    # Calcula IES por 100.000 habitantes
     IES_por_100k = round((`Val._abs._IES` / POPULAÇÃO) * 100000, 2)
-  )
+  ) %>%
+  arrange(desc(POPULAÇÃO))   # <<< ordenação solicitada
 
-pop_ies
-```
-```{r}
 library(knitr)
+
 kable(
   pop_ies,
-  caption = "Tabela 2: Quantidade de  IES por 100k habitantes",
-  format = "pipe" 
+  caption = "Tabela 2: Quantidade de IES por 100k habitantes (ordenado pela população)",
+  format = "pipe"
 )
+
 ```
 
 Observamos que a região Centro-Oeste, apesar de ser a segunda menor em número de IES, em termos proporcionais a população, é a que apresentar maior número proporcional de IES. O que vai de encontro aos valores absolutos. A região Sudeste que tem o maior percentual de IES,em termos proporcionais tem menos IES do que a própria região Sul. Neste sentido, a distribuição de IES no território nacional não privelegia Regiões mais populosas, conseguindo equilibrar a demandanda regional.
@@ -432,6 +421,7 @@ ggplot(tabela_est_ord, aes(x = fct_reorder(UF, `Val._absolutos`, .desc = TRUE)))
 Os primeiros UFs têm uma grande quantidade de instituições, indicando uma concentração de instituições nesses estados. Observe um declínio mais acentuado entre os três primeiros estados. Dai o declínio é mais gradual. Neste sentido, o gráfico de Pareto evidencia uma concentração das IES em poucos estados, como São Paulo e Minas Gerais. Os estados com maior número de IES estão no topo, enquanto os estados menos populosos, como Roraima e Amapá, possuem menor quantidade.
 
 ## 3.2. Instituições Públicas x Instituições Privadas
+
 Nesta seção iremos fazer um panorama entre Instituições públicas e privadas. Consoante a Tabela 3 o quantitativo de instituições privadas é muito superior ao quantitativo de instituições públicas (87,6% das IES no Brasil são privadas e 12,4% são públicas). Apesar da discrepância gigantesca entre o número de IES públicas e privadas em todo o país, se analisarmos por regição, há um equilíbrio na distribuição de IES privadas e, com exceção da região Sul e Centro-Oeste também há um certo equilíbrio na distribuição de IES públicas nas regiões. 
 
 ```{r}
